# ycsb

./: Cargo.toml
src/: generator.rs  lib.rs  workload.rs
src/generator/: discrete.rs  number.rs
